rust/codec-openalex/tests/snapshots/examples__source-1.snap
---
source: rust/codec-openalex/tests/examples.rs
expression: node
---
{
  "type": "Periodical",
  "id": "https://openalex.org/S4306509078",
  "name": "El Ecologista",
  "identifiers": [
    "https://openalex.org/S4306509078",
    "https://www.wikidata.org/entity/Q5821816"
  ],
  "url": "http://www.ecologistasenaccion.org/revista"
}
