rust/codec-openalex/tests/snapshots/examples__source-2.snap
---
source: rust/codec-openalex/tests/examples.rs
expression: node
---
{
  "type": "Periodical",
  "name": "AGU Fall Meeting 2019",
  "identifiers": [
    "https://openalex.org/S4306501059"
  ]
}
