rust/codec-openalex/tests/snapshots/examples__source-3.snap
---
source: rust/codec-openalex/tests/examples.rs
expression: node
---
{
  "type": "Periodical",
  "name": "Asian Herpetological Research",
  "alternateNames": [
    "Yazhou liangqi paxing dongwu yanjiu"
  ],
  "identifiers": [
    "https://openalex.org/S2478435593",
    {
      "type": "PropertyValue",
      "propertyId": "issn_l",
      "value": "2095-0357"
    },
    {
      "type": "PropertyValue",
      "propertyId": "issn",
      "value": [
        "2095-0357"
      ]
    },
    {
      "type": "PropertyValue",
      "propertyId": "mag",
      "value": "2478435593"
    },
    "https://www.wikidata.org/entity/Q21386159",
    "https://fatcat.wiki/container/pfhty6ymmrbmde6g52ixid6xnm"
  ],
  "publisher": {
    "type": "Organization",
    "id": "https://openalex.org/P4310319982",
    "name": "Science Press"
  },
  "issns": [
    "2095-0357",
    "2095-0357"
  ]
}
