rust/codec-openalex/tests/snapshots/examples__source-4.snap
---
source: rust/codec-openalex/tests/examples.rs
expression: node
---
{
  "type": "Periodical",
  "name": "bioRxiv (Cold Spring Harbor Laboratory)",
  "identifiers": [
    "https://openalex.org/S4306402567",
    "https://www.wikidata.org/entity/Q19835482"
  ],
  "url": "https://www.biorxiv.org",
  "publisher": {
    "type": "Organization",
    "id": "https://openalex.org/I2750212522",
    "name": "Cold Spring Harbor Laboratory"
  }
}
