rust/codec-openalex/tests/snapshots/examples__source-5.snap
---
source: rust/codec-openalex/tests/examples.rs
expression: node
---
{
  "type": "Periodical",
  "name": "Nature",
  "identifiers": [
    "https://openalex.org/S137773608",
    {
      "type": "PropertyValue",
      "propertyId": "issn_l",
      "value": "0028-0836"
    },
    {
      "type": "PropertyValue",
      "propertyId": "issn",
      "value": [
        "0028-0836",
        "1476-4687"
      ]
    },
    {
      "type": "PropertyValue",
      "propertyId": "mag",
      "value": "137773608"
    },
    "https://www.wikidata.org/entity/Q180445"
  ],
  "url": "https://www.nature.com/nature/",
  "publisher": {
    "type": "Organization",
    "id": "https://openalex.org/P4310319908",
    "name": "Nature Portfolio"
  },
  "issns": [
    "0028-0836",
    "0028-0836",
    "1476-4687"
  ]
}
