rust/codec-openalex/tests/snapshots/examples__work-1.snap
---
source: rust/codec-openalex/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "authors": [
    {
      "type": "Person",
      "familyNames": [
        "会"
      ],
      "givenNames": [
        "東",
        "京",
        "大",
        "学",
        "判",
        "例",
        "研",
        "究"
      ],
      "identifiers": [
        "https://openalex.org/A5087317007"
      ],
      "name": "東京大学判例研究会"
    }
  ],
  "datePublished": {
    "type": "DateTime",
    "value": "2000-01-01"
  },
  "title": [
    {
      "type": "Text",
      "value": {
        "string": "最高裁判所民事判例研究(民集51巻6号)懲罰的損害賠償を命じた外国判決の承認・執行とその反公序性(平成9.7.11第二小法廷判決)"
      }
    }
  ],
  "content": [],
  "identifiers": [
    "https://openalex.org/W410028754",
    {
      "type": "PropertyValue",
      "propertyId": "mag",
      "value": "410028754"
    }
  ],
  "isPartOf": {
    "type": "PublicationIssue",
    "isPartOf": {
      "type": "PublicationVolume",
      "isPartOf": {
        "type": "Periodical",
        "name": "法学協会雑誌"
      },
      "volumeNumber": 117
    },
    "issueNumber": 11
  },
  "repository": "https://github.com/stencila/stencila",
  "path": "rust/codec-openalex/tests/examples/work-1.json",
  "commit": "redacted",
  "pageStart": 1697,
  "pageEnd": 1708
}
