rust/codec-openalex/tests/snapshots/examples__work-5.snap
---
source: rust/codec-openalex/tests/examples.rs
expression: node
---
{
  "type": "Article",
  "doi": "10.1101/2021.11.24.469827",
  "authors": [
    {
      "type": "Person",
      "orcid": "0000-0002-5366-0673",
      "familyNames": [
        "Byrne"
      ],
      "givenNames": [
        "Allison"
      ],
      "identifiers": [
        "https://openalex.org/A5044863873"
      ],
      "name": "Allison Q. Byrne"
    },
    {
      "type": "Person",
      "orcid": "0000-0002-5154-4302",
      "familyNames": [
        "Waddle"
      ],
      "givenNames": [
        "Anthony"
      ],
      "identifiers": [
        "https://openalex.org/A5025931738"
      ],
      "name": "Anthony W. Waddle"
    },
    {
      "type": "Person",
      "orcid": "0000-0003-4038-4339",
      "familyNames": [
        "Saenz"
      ],
      "givenNames": [
        "Veronica"
      ],
      "identifiers": [
        "https://openalex.org/A5017266182"
      ],
      "name": "Veronica Saenz"
    },
    {
      "type": "Person",
      "orcid": "0000-0002-5937-6585",
      "familyNames": [
        "Ohmer"
      ],
      "givenNames": [
        "Michel"
      ],
      "identifiers": [
        "https://openalex.org/A5041883795"
      ],
      "name": "Michel E. B. Ohmer"
    },
    {
      "type": "Person",
      "familyNames": [
        "Jaeger"
      ],
      "givenNames": [
        "Jef"
      ],
      "identifiers": [
        "https://openalex.org/A5035664436"
      ],
      "name": "Jef R. Jaeger"
    },
    {
      "type": "Person",
      "orcid": "0000-0002-4212-041X",
      "familyNames": [
        "Richards‐Zawacki"
      ],
      "givenNames": [
        "Corinne"
      ],
      "identifiers": [
        "https://openalex.org/A5021819956"
      ],
      "name": "Corinne L. Richards‐Zawacki"
    },
    {
      "type": "Person",
      "orcid": "0000-0002-0073-5790",
      "familyNames": [
        "Voyles"
      ],
      "givenNames": [
        "Jamie"
      ],
      "identifiers": [
        "https://openalex.org/A5079651093"
      ],
      "name": "Jamie Voyles"
    },
    {
      "type": "Person",
      "orcid": "0000-0002-7384-8032",
      "familyNames": [
        "Rosenblum"
      ],
      "givenNames": [
        "Erica",
        "Bree"
      ],
      "identifiers": [
        "https://openalex.org/A5073659833"
      ],
      "name": "Erica Bree Rosenblum"
    }
  ],
  "datePublished": {
    "type": "DateTime",
    "value": "2022-01-01"
  },
  "title": [
    {
      "type": "Text",
      "value": {
        "string": "Host species is linked to pathogen genotype for the amphibian chytrid fungus (Batrachochytrium dendrobatidis)"
      }
    }
  ],
  "content": [],
  "identifiers": [
    "https://openalex.org/W4225981453"
  ],
  "isPartOf": {
    "type": "Periodical",
    "name": "bioRxiv (Cold Spring Harbor Laboratory)"
  },
  "repository": "https://github.com/stencila/stencila",
  "path": "rust/codec-openalex/tests/examples/work-5.json",
  "commit": "redacted"
}
